jasper/force-app/main/default/objects/Offers__c/Offers__c.object-meta.xml
<CustomObject>
    <label>Offers</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>