jasper/force-app/main/default/objects/Offers__c/fields/Offer_Availability_c__c.field-meta.xml
<CustomField>
    <fullName>Offer_Availability_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Availability</label>
    <type>Checkbox</type>
</CustomField>