jasper/force-app/main/default/objects/Offers__c/fields/Offer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Offer_Percentage__c</fullName>
    <label>Offer Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>