jasper/force-app/main/default/objects/Offers__c/fields/Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Offer_Price__c</fullName>
    <label>Offer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>