jasper/force-app/main/default/objects/Offers__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>