jasper/force-app/main/default/objects/Offers__c/validationRules/offer_start_and_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>offer_start_and_end_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),          
    NOT(ISBLANK(End_Date__c)),             
    Start_Date__c &lt;&gt; End_Date__c,           
    End_Date__c &lt;= Start_Date__c           
)</errorConditionFormula>
    <errorMessage>Error End should be greater than Start date</errorMessage>
</ValidationRule>