jasper/force-app/main/default/objects/Offers__c/validationRules/Start_date_end_date_should_not_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_end_date_should_not_same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Start_Date__c )),
NOT(ISBLANK( End_Date__c )),
Start_Date__c = End_Date__c
)</errorConditionFormula>
    <errorMessage>Start Date and End Date must not be the same</errorMessage>
</ValidationRule>